Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18976

Correctly reports DNS resolution failures in lsvcgssd

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      When a DNS resolution fails, this is not reported as an error by lsvcgssd (it returns the IP address instead), but this is causing another error later, returning a strange error message.

      Use proper NI_NAMEREQD flag with getnameinfo() in lsvcgssd when resolving IP addresses, for it to return an error if DNS resolution fails.

      Attachments

        Activity

          People

            adegremont_nvda Aurelien Degremont
            adegremont_nvda Aurelien Degremont
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: